<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/appearance">

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="@string/key_show_current_class"
            app:summary="@string/in_schedule_preview"
            app:title="@string/show_current_class" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:icon="@drawable/ic_baseline_autorenew_24"
            app:key="@string/key_refresh_schedules"
            app:title="@string/sync_title" />
    </PreferenceCategory>

    <PreferenceCategory app:title="About">
        <Preference
            app:icon="@drawable/ic_outline_info_24"
            app:key="@string/key_app_version"
            app:summary="0.0.8-NOT-SPECIAL"
            app:title="@string/app_version" />
        <Preference
            app:icon="@drawable/ic_paper_plane_24"
            app:key="@string/key_open_telegram_channel"
            app:title="@string/app_telegram_channel" />
    </PreferenceCategory>
</PreferenceScreen>