<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.justsoft.nulpschedule.fragments.scheduleselectfragment.ScheduleSelectFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_schedule_select">

        <action
            android:id="@+id/action_FirstFragment_to_scheduleViewFragment"
            app:destination="@id/scheduleViewFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_FirstFragment_to_addScheduleFragment"
            app:destination="@id/addScheduleFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_FirstFragment_to_mainSettingsFragment"
            app:destination="@id/mainSettingsFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/scheduleViewFragment"
        android:name="com.justsoft.nulpschedule.fragments.scheduleviewfragment.ScheduleViewFragment"
        android:label="@string/schedule_fragment_title">
        <action
            android:id="@+id/action_scheduleViewFragment_to_FirstFragment"
            app:destination="@id/FirstFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@id/FirstFragment" />
    </fragment>
    <fragment
        android:id="@+id/addScheduleFragment"
        android:name="com.justsoft.nulpschedule.fragments.scheduleaddfragment.AddScheduleFragment"
        android:label="@string/add_a_schedule"
        tools:layout="@layout/fragment_add_schedule">
        <action
            android:id="@+id/action_addScheduleFragment_to_scheduleViewFragment"
            app:destination="@id/scheduleViewFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@id/FirstFragment" />
        <action
            android:id="@+id/action_addScheduleFragment_to_FirstFragment"
            app:destination="@id/FirstFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@id/FirstFragment" />
    </fragment>
    <fragment
        android:id="@+id/mainSettingsFragment"
        android:name="com.justsoft.nulpschedule.fragments.settingsfragment.MainSettingsFragment"
        android:label="@string/settings">
        <action
            android:id="@+id/action_mainSettingsFragment_to_FirstFragment"
            app:destination="@id/FirstFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
</navigation>